# ahrs-monitor

./: .gitignore  README.md  rustfmt.toml
ahrs-monitor/: Cargo.toml  build.rs
ahrs-monitor/.cargo/: config.toml
ahrs-monitor/configs/: config.toml
ahrs-monitor/examples/: imu_simulator.rs
ahrs-monitor/src/: app.rs  config.rs  lib.rs  logger.rs  macros.rs  main.rs
ahrs-monitor/src/config/: imu.rs  logging.rs  mod.rs  net.rs
ahrs-monitor/src/core/: attitude.rs  ingester.rs  mod.rs
ahrs-monitor/src/model/: attitude.rs  mod.rs  payload.rs
ahrs-monitor/src/ui/: dashboard.rs  inspector.rs  mod.rs  telemetry.rs  utils.rs
