# SPDX-License-Identifier: Apache-2.0.
# Copyright (C) 2026-present ahrs-monitor project and contributors.

# Project package info section.
[package]
name        = "ahrs-monitor"
version     = "1.1.0"
description = "AHRS cross-platform telemetry station"
authors     = ["Alexander <alkuzindev@gmail.com>"]
repository  = "https://github.com/alkuzin/ahrs-monitor"
license     = "Apache-2.0"
edition     = "2024"

# Project dependencies section.
[dependencies]
# An easy-to-use GUI.
egui = "0.33"
# Simple plotting library for egui.
egui_plot = "0.34"
# A simple logger that can be configured via environment variables,
# for use with the logging facade exposed by the log crate.
env_logger = "0.11"
# The egui framework crate.
eframe = "0.33"
# A lightweight logging facade.
log = "0.4"
# Date and Time for Rust.
chrono = "0.4"
# A runtime for writing reliable network applications
# without compromising speed.
tokio = { version = "1.49", features = ["full"] }
# Memory-safe autonomous navigation framework
tsilna-nav = { git = "https://github.com/alkuzin/tsilna", features = ["math"] }
# The lightweight, binary application-layer (L7) protocol designed specifically
# for the Inertial Navigation Systems (INS) and autonomous platforms.
indtp = { git = "https://github.com/alkuzin/indtp", version = "0.9.3" }
# A trait object based error type for easy idiomatic error handling.
anyhow = "1.0"
# Framework for serializing and deserializing Rust data structures
# efficiently and generically.
serde = { version = "1.0", features = ["derive"] }
# Serialization and deserialization between Rust data structures and JSON
# using the serde framework.
serde_json = "1.0"
# A serde compatible TOML parsing library.
toml = "0.9"
# A sensor fusion library for attitude and heading reference systems.
fusion-ahrs = "0.3.0"
# Fast and flexible CSV reader and writer, with support for serde.
csv = "1.4"
# Utilities for random number generation.
rand = "0.10.0"
# Generating random samples from probability distributions.
rand_distr = "0.6.0"

# Dependencies section during project building.
[build-dependencies]
# Utilities for random number generation.
rand = "0.10.0"

# IMU simulator executable file section.
[[bin]]
name = "imu-simulator"
path = "src/bin/imu_simulator/main.rs"

# Key generator executable file section.
[[bin]]
name = "keygen"
path = "src/bin/keygen.rs"
